[package]
name = "snap-coin-pay"
version = "0.1.0"
edition = "2024"
author = "Ice"
description = "A simple way to handle deposits and withdrawals on the Snap Coin Network"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
snap-coin = "13.1.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["sync", "time"] }
uuid = { version = "1.20.0", features = ["v4"] }
